<resources>
    <string name="app_name">GermanExam</string>
    <string name="app_name_rus">ЕГЭ Немецкий язык</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="student_class">Класс</string>
    <string name="next">Далее</string>
    <string name="Exam">Экзамен</string>
    <string name="variants">Варианты\nЕГЭ</string>
    <string name="settings">Настройки</string>
    <string name="hello_screen">Введите имя, фамилию и класс, чтобы учитель мог быстро ориентироваться в файлах записи вашего задания.</string>
    <string name="back">Назад</string>
    <string name="start_test">Prüfung starten</string>
    <string name="start_exam">Экзамен начнётся после нажатия кнопки \"Prüfung starten\"</string>
    <string name="task1">Aufgabe 1. Stellen Sie sich vor, dass Sie zusammen mit Ihrem Freund / Ihrer Freundin an einem Projekt arbeiten. Sie haben einen interessanten Beitrag für Ihr Projekt gefunden und wollen ihn Ihrem Freund / Ihrer Freundin vorlesen. Lesen Sie diesen Beitrag zunächst 1,5 Minuten still und danach laut vor. Sie haben zum Vorlesen höchstens 1,5 Minuten Zeit.</string>
    <string name="task2">Aufgabe 2. Sehen Sie sich folgende Anzeige an. \nSie haben beschlossen, an dieser Fahrradreise teilzunehmen. Sie möchten aber gern mehr darüber wissen. Überlegen Sie innerhalb von 1,5 Minuten fünf direkte Fragen zu folgenden Stichpunkten:</string>
    <string name="task1_answer">Lesen Sie den Text vor.</string>
    <string name="task2_answer">Frage 1. \n1) Lage des Fitnessstudios</string>
    <string name="text1">Karate ist ein japanisches Wort und heißt übersetzt \"leere Hand\". Das beschreibt diese Sportart sehr gut. Es geht um Selbstverteidigung und Nahkampf ohne Waffen. \nAngst, beim Karate einen Treffer abzubekommen, brauchst du nicht zu haben. Denn anders als beim Boxen verzichten Karate-Sportler (sie nennen sich übrigens Karatekas) auf Treffer am Gegner. Sie stoppen Fuß- und Fauststöße vor dem Auftreffen ab. Voraussetzung dafür ist Selbstdisziplin, Verantwortungsbewusstsein gegenüber dem Partner und natürlich eine gute Körperbeherrschung. \nDank seiner vielseitigen Anforderungen ist dieser Sport ein idealer Ausgleich zum Alltag. Beim Karate werden Kraft, Ausdauer, Schnelligkeit und Beweglichkeit trainiert. Das macht fit! Mit Entspannungstechniken, Atemübungen und Meditation steigert ein Karatekämpfer seine Konzentrationsfähigkeit und schult die eigene Körperwahrnehmung.</string>
    <string name="preparation">Vorbereitungszeit</string>
    <string name="recording">Aufnahme läuft</string>
    <string name="task_one">Aufgabe 1</string>
    <string name="task_two">Aufgabe 2</string>
    <string name="task_three">Aufgabe 3</string>
    <string name="task_four">Aufgabe 4</string>
    <string name="prep_ans_task1">Vorbereitungszeit 01:30\nSprechzeit 01:30</string>
    <string name="prep_ans_task2">Vorbereitungszeit 01:30\nSprechzeit 01:40</string>
    <string name="prep_ans_task3">Vorbereitungszeit 01:30\nSprechzeit 02:00</string>
    <string name="prep_ans_task4">Vorbereitungszeit 01:30\nSprechzeit 02:00</string>
    <string name="timer">-01:30</string>
    <string name="student_name">Ученик: Иван Иванов</string>
    <string name="person_class">Класс: 11А</string>
    <string name="microphone_test">Проверка\nмикрофона</string>
    <string name="microphone_test_1_line">Проверка микрофона</string>
    <string name="file_manager">Записанные\nфайлы</string>
    <string name="about_application">Информация</string>
    <string name="change_data">Изменить данные</string>
    <string name="save">Сохранить</string>
    <string name="dialog_window_title">Куда Вы хотите перейти?</string>
    <string name="desktop">Рабочий стол</string>
    <string name="menu">Главное меню</string>
    <string name="variants_menu">Выбор варианта</string>
    <string name="dialog_window_title_delete_files">Вы уверены, что хотите удалить записанный вариант?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ready_upper_start_text">Der Test beginnt</string>
    <string name="ready_upper_next_text">Die nächste Aufgabe kommt</string>
    <string name="ready_upper_answer_text">Fangen Sie an zu sprechen</string>
    <string name="ready_under_text">Sekunden</string>
    <string name="ready_seconds_text">05</string>
    <string name="end_answer">Antwort beenden</string>
    <string name="ending_answer_dialog">Möchten Sie diese Aufgabe beenden und mit der nächsten beginnen?</string>
    <string name="ending_answer_dialog_exam">Möchten Sie diese Antwort beenden und die Antworten anhören?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="task2_questions">1) Lage des Fitnessstudios \n2) Öffnungszeiten \n3) mit ohne Schwimmbad \n4) Preis für 3 Monate \n5) Ermäßigungen für Studenten</string>
    <string name="task2_ask">Sie haben für jede Frage je 20 Sekunden Zeit.</string>
    <string name="task2_title_image">Werden Sie unser Mitglied im August und besuchen Sie uns einen Monat kostenlos.</string>
    <string name="task3">Aufgabe 3. Stellen Sie sich vor, dass diese Fotos aus Ihrem Fotoalbum stammen. Wählen Sie ein Foto, um es Ihrem Freund/Ihrer Freundin zu zeigen und darüber zu erzählen. Sie haben 1,5 Minuten Zeit zur Vorbereitung und danach höchstens 2 Minuten Zeit zum Sprechen (12–15 Sätze). Halten Sie sich – wenn Sie über das gewählte Foto erzählen – an folgende Stichpunkte:</string>
    <string name="task3_foto">Aufgabe 3. Sie haben 1.5 Minuten Zeit zur Vorbereitung und danach höchstens 2 Minuten Zeit zum Sprechen (12–15 Sätze). Halten Sie sich – wenn Sie über das gewählte Foto erzählen – an folgende Stichpunkte:</string>
    <string name="task3_answer_text">Beginnen Sie zu sprechen.</string>
    <string name="task3_list">· wann und wo wurde das Foto gemacht \n· was oder wen zeigt das Foto \n· was passiert da gerade \n· warum bewahren Sie das Foto in Ihrem Fotoalbum auf \n· warum haben Sie beschlossen, das Foto Ihrem Freund/Ihrer Freundin zu zeigen.</string>
    <string name="task3_photo1">Foto 1</string>
    <string name="task3_photo2">Foto 2</string>
    <string name="task3_photo3">Foto 3</string>
    <string name="task4">Aufgabe 4. Sehen Sie sich zwei Fotos an. Sie sollen die zwei Fotos vergleichen und anschließend darüber berichten, was beide Fotos unterscheidet und verbindet. Halten Sie sich dabei an folgenden Plan:</string>
    <string name="task4_list">· beschreiben Sie kurz beide Fotos \n· sagen Sie, was beide Fotos gemeinsam haben \n· sprechen Sie darüber, was beide Fotos unterscheidet \n· sagen Sie, welches Leben Sie wilden Tieren wünschen \n· erklären Sie, warum</string>
    <string name="task4_text">Sie haben 1.5 Minuten Zeit zur Vorbereitung und danach höchstens 2 Minuten Zeit zum Sprechen. Sprechen Sie zusammenhängend.</string>
    <string name="task4_answer_text">Beginnen Sie zu sprechen.</string>
    <string name="answers">Прослушивание ответов</string>
    <string name="congratulations">Поздравляем! Экзамен закончен.</string>
    <string name="answer_task1">ОТВЕТ НА ЗАДАНИЕ 1</string>
    <string name="answer_task2">ОТВЕТ НА ЗАДАНИЕ 2</string>
    <string name="answer_task3">ОТВЕТ НА ЗАДАНИЕ 3</string>
    <string name="answer_task4">ОТВЕТ НА ЗАДАНИЕ 4</string>
    <string name="complete">Завершить</string>
    <string name="task2_title">Aufgabe 2. Sehen Sie sich folgende Anzeige an.\n</string>
    <string name="task2_question1">Frage 1.\n</string>
    <string name="task2_question2">Frage 2.\n</string>
    <string name="task2_question3">Frage 3.\n</string>
    <string name="task2_question4">Frage 4.\n</string>
    <string name="task2_question5">Frage 5.\n</string>
    <string name="share">Поделиться</string>
    <string name="main_menu">Главное\nменю</string>
    <string name="main_menu_1_line">Главное меню</string>
    <string name="recording_microphone">Записать</string>
    <string name="recording_microphone_stop">Остановить\nзапись</string>
    <string name="play_recording">Прослушать</string>
    <string name="play_recording_stop">Остановить</string>
    <string name="restart_exam">Ваш экзамен закончился, потому что Вы вышли из приложения. Вы можете начать его заново или выйти в главное меню.</string>
    <string name="restart">Начать заново</string>
    <string name="file_manager_title">Иванов Иван 11Б 18 вариант</string>
    <string name="delete">Удалить</string>
    <string name="files_not_found">Записанные файлы отсутствуют.\nЗакончите полностью один из вариантов,\nчтобы просматривать записи.</string>
    <string name="about_app_title">ЕГЭ Немецкий устная часть</string>
    <string name="about_app_version">Версия: 1.0 (Январь 2021)</string>
    <string name="about_app_text">Приложение предназначено для подготовки к Единому Государственному Экзамену устной части по немецкому языку.\n\nПриложение включает в себя:\n\n· Тренажёр устной части ЕГЭ по немецкому языку максимально приближенный к реальному на самом экзамене\n\n· 25 вариантов ЕГЭ устной части по немецкому языку\n\n· Возможность начать любой вариант из списка доступных или случайный попавшийся\n\n· Отправка Ваших записанных ответов через любое приложение, поддерживающее формат mp3\n\n· Менеджер записанных вариантов:\nЕсли вдруг Вы забыли отправить записи или прослушать их, то всегда можно сделать это повторно через кнопку \"Записанные файлы\" в настройках приложения\n\nВсе варианты ЕГЭ взяты с официального сайта ФИПИ и тренировочных работ ЕГЭ СтатГрад.</string>
    <string name="about_app_questions">По всем вопросам обращайтесь по адресу:</string>
    <string name="about_app_email">a.kobyzhev@gmail.com</string>
    <string name="about_app_developer">© Кобыжев Александр</string>
    <string name="reset">Сбросить варианты</string>
    <string name="reset_title">Вы уверены, что хотите сбросить все варианты?</string>
    <string name="yes_rus">Да</string>
    <string name="no_rus">Нет</string>
    <string name="rating">Оцените сложность варианта</string>
    <string name="rate">Оценить</string>
</resources>