<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyExam">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/about_app_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/calibri"
            android:text="@string/about_app_title"
            android:textSize="18sp"
            android:background="@color/greyExam"
            android:gravity="center"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/calibri"
            android:text="@string/about_app_version"
            android:textSize="18sp"
            android:background="@color/greyExam"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/about_app_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/calibril"
            android:text="@string/about_app_text"
            android:textSize="18sp"
            android:background="@color/greyExam"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/about_app_questions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/calibril"
            android:text="@string/about_app_questions"
            android:textSize="18sp"
            android:background="@color/greyExam"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/about_app_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/calibril"
            android:text="@string/about_app_email"
            android:textSize="18sp"
            android:background="@color/greyExam"
            android:padding="10dp"
            android:autoLink="email"/>

        <TextView
            android:id="@+id/about_app_developer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/calibril"
            android:text="@string/about_app_developer"
            android:textSize="18sp"
            android:background="@color/greyExam"
            android:padding="10dp"/>

    </LinearLayout>
</ScrollView>