<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyExam"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.15"
        android:gravity="center"
        android:text="@string/settings"
        android:background="@drawable/button_blue_not_press"
        android:textColor="#FFFFFF"
        app:autoSizeMaxTextSize="45sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeTextType="uniform" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:id="@+id/student_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.15"
        android:gravity="center"
        android:text="@string/student_name"
        app:autoSizeMaxTextSize="70sp"
        app:autoSizeMinTextSize="15sp"
        app:autoSizeTextType="uniform" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/person_class"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.15"
        android:gravity="center"
        android:text="@string/person_class"
        app:autoSizeMaxTextSize="70sp"
        app:autoSizeMinTextSize="15sp"
        app:autoSizeTextType="uniform" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/microphone_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/button_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/microphone_test"
            android:textColor="#FFFFFF"
            app:autoSizeMaxTextSize="80sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/file_manager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/button_blue"
            android:lines="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/file_manager"
            android:textColor="#FFFFFF"
            app:autoSizeMaxTextSize="80sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/about_application"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/button_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:lines="1"
            android:text="@string/about_application"
            android:textColor="#FFFFFF"
            app:autoSizeMaxTextSize="80sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_navigation"
        app:itemIconTint="@android:color/black"
        app:itemTextColor="@android:color/black"/>
</LinearLayout>