<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyExam">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_test"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/corbel"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/restart_exam"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_restart_test"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_blue"
            android:textColor="#FFFFFF"
            android:lines="1"
            app:autoSizeMaxTextSize="70sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/restart"
            android:textAllCaps="false"
            android:layout_marginStart="10dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10" />

        <Button
            android:id="@+id/button_main_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_blue"
            android:textColor="#FFFFFF"
            android:lines="1"
            app:autoSizeMaxTextSize="70sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/main_menu"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

</LinearLayout>